--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,4 @@
+
 body {
     background-color: #5a68e6;
     max-width: 960px;
@@ -5,6 +6,10 @@ body {
   padding: 4em;
   font-size: 18px;
   text-align: center;
+}
+  div { 
+    max-width: 1600px;
+
 }
 header {
     background-color: #F0925D;
@@ -16,5 +21,8 @@ footer {
     width: 300px;
 }
 .icon {
+    width: 80px;
+}
+.logo {
     width: 80px;
 }
