--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,11 +1,18 @@
+:root{
+    --primary-color: #2CA361;
+    --heading-font: "Minecrafter";
+    --paragraph-font: "ROG Fonts";
+    --footer-font: "Techno Hideo";
+}
+
 
 body {
-    background-color: #5a68e6;
+    background-color: var(--primary-color);
     max-width: 960px;
-  margin: 0 auto;
-  padding: 4em;
-  font-size: 18px;
-  text-align: center;
+    margin: 0;
+    padding: 0;
+    font-size: 18px;
+    text-align: center;
 }
   div { 
     max-width: 1600px;
@@ -13,12 +20,24 @@ body {
 }
 header {
     background-color: #F0925D;
+    font-family: var(--heading-font);
 }
+
+section{
+    font-family: var(--paragraph-font);
+}
+
 footer {
     background-color: #887B5A;
+    font-family: var(--footer-font);
+}
+
+main{
+    padding-inline: 100px;
 }
 .card-img {
     width: 300px;
+    border: 10px solid #E33459;
 }
 .icon {
     width: 80px;
