--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -8,9 +8,10 @@
 
 body {
     background-color: var(--primary-color);
-    max-width: 960px;
+    max-width: auto;
     margin: 0;
     padding: 0;
+    padding-left: 0;
     font-size: 18px;
     text-align: center;
 }
@@ -33,7 +34,7 @@ footer {
 }
 
 main{
-    padding-inline: 100px;
+    padding-inline: 0px;
 }
 .card-img {
     width: 300px;
