--- a/positionstyles.css
+++ b/positionstyles.css
@@ -101,41 +101,40 @@
   .content4 {
     /* This is the parent of the activity 3 boxes. */
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 0px;
+    grid-template-columns: 50% 50%
   }
   .red4 {
-    width: 100%; 
-    height: 100px; 
+    width: 300px; 
+    height: 100%; 
     background-color: red;
-    grid-column: 1/3;
+    grid-column: 0;
+    grid-row: 1;
   } 
   .green4 {
-    width: 225px; 
-    height: 150px; 
+    width: 300px; 
+    height: 100px; 
     background-color: green;
+    grid-column: 1/3;
+    grid-row: 1;
   } 
   .yellow4 {
-    width: 225px; 
-    height: 150px; 
+    width: 300px; 
+    height: 100px; 
     background-color: gold;
-    margin-left: 25px;
+    grid-column: 1/3;
+    grid-row: 2;
   } 
   .blue4 {
-    width: 100%;
+    width: 300px;
     height: 100px; 
     background-color: blue;
     grid-column: 1/3;
-  } 
+    grid-row: 3;
+  }
   /* Activity 5 styles */ 
   .content5 {
     /* This is the parent of the activity 5 boxes. */
-    height: 400px;    
-    gap: 0px;
-    grid-template-columns: 1fr 1fr;
-    display: grid;
-    justify-items: center;
-    gap: 20px;
+
   }
   .red5 { 
     width: 100px; 
@@ -162,6 +161,8 @@
   /* Activity 6 styles */ 
   .content6 {
     /* This is the parent of the activity 6 boxes. */
+    display:grid;
+    grid-template-columns: 200px;
   }
   .red6 {
     width: 100px; 
