--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -14,23 +14,29 @@ body {
     padding-left: 0;
     font-size: 18px;
     text-align: center;
+    font-size: 22px;
 }
-  div { 
+
+h2 {
+    margin: 0;
+}
+
+div { 
     max-width: 1600px;
 
 }
 
-header{
+header {
     display: grid;
     grid-template-columns: 150px auto;
 }
 
-nav{
+nav {
     display: flex;
     justify-content: space-around;
 }
 
-#logo_link{
+#logo_link {
     padding-top: 5px;
     justify-self: center;
     align-self: center;
@@ -39,22 +45,22 @@ nav{
 #hero {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
-    margin-top: 100px;
+    margin-top: -100px;
 }
 
-#hero-box{
+#hero-box {
     grid-column: 1/4;
     grid-row: 1/3;
     z-index: -1;
 }
 
-#hero-msg{
+#hero-msg {
     grid-column: 2/3;
     grid-row: 1/2;
     margin-top: 100px;
 }
 
-#hero-msg h4{
+#hero-msg h4 {
     color: white;
 }
 
@@ -63,14 +69,43 @@ header {
     font-family: var(--heading-font);
 }
 
+nav a {
+    padding: 35px;
+    text-align: center;
+    color: #fcfbfb;
+    text-decoration: none;
+}
+
+main section img {
+    box-sizing: border-box;
+}
+
+.book, .join {
+    padding: 15px 30px;
+    background-color: #d9c2a3;
+    color: black;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
+}
+
+.home-title {
+    font-family: var(--heading-font);
+    font-size: 2em;
+    margin-top: 10px;
+}
+
 .card-img, .mountains {
     width: 100%;
 }
 
 .card-img {
-    border: 10px solid #887B5A;
+    border: 10px solid #d9c2a3;
     transition: transform .5s;
-    box-shadow: 5px 5px 10px #887B5A;
+    box-shadow: 5px 5px 10px #6f7364;
+    border: 10px;
 }
 
 .card-img:hover{
@@ -108,9 +143,14 @@ header {
 .msg {
     grid-column: 6/10;
     grid-row: 6/7;
-    background-color: #9708FE;
+    background-color: #6f7364;
     padding: 35px;
-    box-shadow: 5px 5px 10px #9782E6;
+    box-shadow: 5px 5px 10px #6f7364;
+    line-height: 1.5em;
+}
+
+.msg p {
+    padding-bottom: 15px;
 }
 
 section{
@@ -118,7 +158,7 @@ section{
 }
 
 footer {
-    background-color: #887B5A;
+    background-color: #6f7364;
     font-family: var(--footer-font);
     padding: 25px 50px;
     margin-top: 200px;
@@ -136,9 +176,14 @@ main{
 }
 .icon {
     width: 80px;
+    padding-top: 10px;
 }
 .logo {
     width: 80px;
+}
+
+footer .social img {
+    padding-top: 15px;
 }
 
 @media screen and (max-width: 900px) {
@@ -164,7 +209,7 @@ main{
     }
     .home-title {
         font-size: 25px;
-        color: #E88180;
+        color: #6f7364;
     }
     .rivers-card, .camping-card, .rapids-card {
         margin: 50px auto;
